# PhyVR

./: .gitignore  .gitmodules  README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/samuelberrien/phyvr/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  phyvr.cpp  phyvr.h  utils.cpp  utils.h  wrapper-lib.cpp
app/src/main/cpp/controller/: controls.h  inputs.h
app/src/main/cpp/core/: entity.cpp  entity.h  map.cpp  map.h  physics.cpp  physics.h  simple.cpp  simple.h  tank.cpp  tank.h
app/src/main/cpp/model/: physics.h
app/src/main/cpp/view/: drawable.cpp  drawable.h  graphics.cpp  graphics.h  height_map.cpp  height_map.h
app/src/main/java/com/samuelberrien/phyvr/: GameActivity.java  MainActivity.java
app/src/main/res/drawable/: exit_to_app.xml
app/src/main/res/layout/: activity_main.xml  game_activity.xml  main_activity.xml
app/src/main/res/menu/: settings_menu.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/samuelberrien/phyvr/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
sdk/: build.gradle
sdk/qrcode/android/java/com/google/cardboard/sdk/: QrCodeCaptureActivity.java
sdk/qrcode/android/java/com/google/cardboard/sdk/qrcode/: QrCodeContentProcessor.java
sdk/qrcode/android/java/com/google/cardboard/sdk/qrcode/camera/: CameraSource.java
